# test-dependabot-core-4209

./: pyproject.toml  requirements.txt
.github/: dependabot.yml
